<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:title="@string/profile_menu"
            android:id="@+id/profile_nav"
            android:textSize="30dp"


            />
        <item
            android:title="@string/burger"
            android:id="@+id/burger_nav"
            android:textSize="30sp"
            />
        <item
            android:title="@string/snaks"
            android:id="@+id/snaks_nav"
            android:textSize="30sp"


            />
        <item
            android:title="@string/orders"
            android:id="@+id/orders_nav"
            android:textSize="30sp"

            />
        <item
            android:title="@string/location"
            android:id="@+id/locations_nav"
             android:textSize="30sp"
            />

        <item
            android:title="@string/logout"
            android:id="@+id/logout_nav"
            android:textSize="20sp"

            />





</menu>