<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/iburgerlogo"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textColor="@color/DarkGray"
            android:textColorHint="@color/DarkGray"
            android:textSize="12sp" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/DarkGray"
            android:textColorHint="@color/DarkGray"
            android:textSize="12sp" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkGray"
            android:textColorHint="@color/DarkGray"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/locationIn"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/DarkGray"
            android:textSize="12sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="20dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:textColor="@color/DarkGray"
            android:textSize="12sp"
            android:inputType="numberPassword"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/repass"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="20dp"
            android:background="@color/Yellow"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:textColor="@color/DarkGray"
            android:textSize="12sp"
            android:inputType="numberPassword"
            />



        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/signup"
            android:textColor="@color/Orange"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>